# insect-detection-yellow-traps

./: .coverage  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REPO_STRUCTURE.md  SECURITY.md  docker-compose.app.yml  docker-compose.yml  insect-detection-yellow-traps.code-workspace  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
01_project_docs_notes/: README.md
01_project_docs_notes/docs/: project_layout.md
02_pm_analytics_dashboard/: .env.example  README.md  README_STRUCTURE.md  app.py  quality_history.json  requirements.txt
02_pm_analytics_dashboard/src/: charts.py  data_loader.py  github_client.py  metrics.py  utils.py
03_application/: README.md  docker-compose.app.yml  docker-compose.yml
03_application/backend/: .dockerignore  .env.example  README.md  requirements.txt
03_application/frontend/: README.md  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
03_application/tests/: conftest.py
04_modeling_experimental/: README.md
04_modeling_experimental/configs/: base.yaml  classical_cv.yaml  yolo.yaml
04_modeling_experimental/scripts/: check_quality.sh  sync_brightlands_data.sh  train_strong_yolo.sh
04_modeling_experimental/src/: cli.py
04_modeling_experimental/tests/: conftest.py
apps/backend/: Dockerfile  README.md
apps/frontend/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  (+1 more)
configs/: base.yaml  rtdetr.yaml  yolo.yaml
notes/: notes.md
scripts/: check_quality.sh  sync_brightlands_data.sh  train_strong_yolo.sh
src/: cli.py
tests/: test_cli_smoke.py
(+168 files in other folders)
