[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-project-template"
version = "0.1.0"
description = "Reusable CV template with modular datasets, models, training, and inference"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "typer>=0.12",
  "pyyaml>=6.0",
  "pillow>=10.0",
  "opencv-python>=4.8",
  "torch>=2.0",
  "ultralytics>=8.0",
]

[project.scripts]
cvcore = "cvcore.cli:app"
insect = "cli:app"

[tool.pytest.ini_options]
testpaths = ["03_application/tests", "04_modeling_experimental/tests"]

[tool.setuptools]
package-dir = {"" = "04_modeling_experimental/src"}

[tool.setuptools.packages.find]
where = ["04_modeling_experimental/src"]
